--- a/ИСТбд-22/Енилов Д.А/lab0/.vscode/tasks.json
+++ b/ИСТбд-22/Енилов Д.А/lab0/.vscode/tasks.json
@@ -12,7 +12,7 @@
 				"${fileDirname}\\${fileBasenameNoExtension}.exe"
 			],
 			"options": {
-				"cwd": "C:\\Program Files\\mingw-w64\\x86_64-8.1.0-posix-seh-rt_v6-rev0\\mingw64\\bin"
+				"cwd": "${workspaceFolder}"
 			},
 			"problemMatcher": [
 				"$gcc"
